--- a/sass/properties.scss
+++ b/sass/properties.scss
@@ -1,6 +1,12 @@
-$cream: #e5ba85;
-$darkcream: #e0a55b;
-$darkercream: #c9822b;
+$gray: #999;
+$darkgray: #777;
+$darkergray: #555;
+$darkestgray: #333;
+$lightgray: #AAA;
+$lightergray: #CCC;
+$lightestgray: #EEE;
+$maroon: #a00405;
+$green: #337321;
 
 
 // PLACEHOLDER
