--- a/sass/slideresponsive.scss
+++ b/sass/slideresponsive.scss
@@ -2,8 +2,8 @@
 
 
 .responsiveslide {
-	margin-top: 20px;
-	margin-bottom: 20px;
+	padding-top: 5px;
+	background: #FFF;
 	nav {
 		padding: 10px 20px;
 		text-align: center;
