--- a/sass/slider.scss
+++ b/sass/slider.scss
@@ -3,7 +3,6 @@
 
 .mi-slider {
 	position: relative;
-	margin-top: 30px;
 	height: 450px;
 	border-bottom: solid 5px $maroon + 65;
 	background: $maroon - 50;
@@ -99,7 +98,7 @@
 					position: absolute;
 					pointer-events: none;
 					border-color: transparent;
-					border-top-color: $lightestgray;
+					border-top-color: $lightergray - 10;
 					border-width: 20px;
 					left: 50%;
 					margin-left: -20px;
